# vix

./: .gitignore  CMakeLists.txt  README.md  main.cpp
server/: CMakeLists.txt  vix_server.cpp  vix_server.hpp
server/config/: CMakeLists.txt  default_configs.json  vix_config.cpp  vix_config.hpp
